# EvoChess

./: Cargo.toml  README.md  dev.sh
app/: Cargo.toml  Trunk.toml  index.html
app/src/: consts.rs  main.rs
app/src/components/: chess.rs  header.rs  mod.rs
app/src/pages/: home.rs
app/src/utils/: image_future.rs  mod.rs
app/src/utils/chess_ui/: board.rs  mod.rs  moves.rs  pieces.rs  preload.rs
app/style/: fonts.scss
server/: Cargo.toml
server/src/: main.rs
src/: error.rs  lib.rs
src/chess/: display.rs  mod.rs  moves.rs
