[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version ="0.19.3"}


evo-chess = {path=".."}
chess = "3.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0.44"
getrandom = { version = "0.2", features = ["js"] }

log = "0.4"
wasm-logger = "0.2"

wasm-bindgen = "0.2"
futures = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'HtmlImageElement',
]
