[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# our shared library
evo-chess = {path=".."}

# the web server
actix-web = "4"
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.1", features = ["cookie-session"] }
actix-cors = "0.6.4"
actix-multipart = "0.4.0"

# serde tools
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# logging
log = "0.4"
env_logger = "0.9.0"
